@@ -1,3 +1,8 @@
+2009-09-09  M R Swami Reddy <MR.Swami.Reddy@nsc.com>
+
+	* elf32-cr16.c (elf32_cr16_relocate_section): Add code to discard the
+	linkonce or linker script discarded section.
+
 2009-09-09  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-xtensa.c (elf_xtensa_relax_section): Delete -r check.
